--- a/news/templates/news/news.html
+++ b/news/templates/news/news.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="row mb-2">
-        <div class="col-md-12" v-for="news in newsListOn">
+        <div class="col-md-12" v-for="news in newsDisplay">
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
                     <strong class="d-inline-block mb-2 text-primary">[[news.category]]</strong>
