--- a/news/templates/news/news.html
+++ b/news/templates/news/news.html
@@ -13,17 +13,29 @@
             <h4 id="category">{{category}}</h4>
         </div>
         <hr>
-    </div>
-
-    <div class="row mb-2">
-        <div class="col-md-12" v-for="news in newsDisplay">
+        <div class="col-md-12">
+            {% for n in news %}
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                <div class="col p-4 d-flex flex-column position-static">
+                    <strong class="d-inline-block mb-2 text-primary">{{n.category}}</strong>
+                    <h3 class="mb-0">{{n.title}}</h3>
+                    <div class="mb-1 text-muted">{{n.date}}</div>
+                    <p class="card-text mb-auto">{{n.abstract}}</p>
+                    <a href="{% url 'news' category=n.tag token=n.token %}" class="stretched-link">Continue reading</a>
+                </div>
+                <div class="col-auto d-none d-lg-block">
+                    <img class="img-thumbnail" width="300" src="{{n.image}}">
+                </div>
+            </div>
+            {% endfor %}
+
+            <div v-for="news in newsList" class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
                     <strong class="d-inline-block mb-2 text-primary">[[news.category]]</strong>
                     <h3 class="mb-0">[[news.title]]</h3>
-                    <div class="mb-1 text-muted">[[news.date_str]]</div>
+                    <div class="mb-1 text-muted">[[news.date]]</div>
                     <p class="card-text mb-auto">[[news.abstract]]</p>
-                    <a v-bind:href="news.source_token" class="stretched-link">Continue reading</a>
+                    <a v-bind:href="news.token" class="stretched-link">Continue reading</a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
                     <img class="img-thumbnail" width="300"
@@ -34,7 +46,7 @@
     </div>
 
     <div class="text-center">
-        <button type="button" class="btn btn-dark" v-on:click="showMoreNews($event)">More Stories</button>
+        <button type="button" class="btn btn-dark" v-on:click="fetchMoreNews($event)">More Stories</button>
     </div>
 </div>
 {% endblock %}
