--- a/news/templates/news/base.html
+++ b/news/templates/news/base.html
@@ -12,10 +12,6 @@
     <script src="{% static 'bootstrap/jquery-3.5.1.slim.min.js' %}"></script>
     <script src="{% static 'bootstrap/bootstrap.bundle.min.js' %}"></script>
 
-    <script src="https://unpkg.com/vue@next"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
-
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
@@ -57,15 +53,11 @@
                 <a class="blog-header-logo text-dark" href="{% url 'index' %}">Taiwan News</a>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
-                <a class="text-muted" href="#" aria-label="Search">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
-                         stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img"
-                         viewBox="0 0 24 24" focusable="false"><title>Search</title>
-                        <circle cx="10.5" cy="10.5" r="7.5"/>
-                        <path d="M21 21l-5.2-5.2"/>
-                    </svg>
-                </a>
-                <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
+                {% if user.is_authenticated %}
+                <a class="btn btn-sm btn-outline-secondary" href="{% url 'logout' %}">Sign out</a>
+                {% else %}
+                <a class="btn btn-sm btn-outline-secondary" href="{% url 'login' %}">Sign in</a>
+                {% endif %}
             </div>
         </div>
     </header>
