--- a/news/templates/news/news.html
+++ b/news/templates/news/news.html
@@ -3,6 +3,9 @@
 
 {% block title %}Taiwan News{% endblock %}
 {% block head %}
+    <script src="https://unpkg.com/vue@next"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <script defer src="{% static 'news/js/news.js' %}"></script>
 {% endblock %}
 
