--- a/users/templates/users/signin.html
+++ b/users/templates/users/signin.html
@@ -47,7 +47,7 @@
         <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         <br>
-        <a href="{% url 'register' %}">Sign up</a>
+        <a href="{% url 'sign-up' %}">Sign up</a>
     </form>
 </div>
 {% endblock %}
